#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1209] Fix SIP, SASL, and HTTP Digest authentication when the algorithm
  contains lowercase characters. [Jeswin Mathai]

o [GH#1204] Nmap could be fooled into ignoring TCP response packets if they
  used an unknown TCP Option, which would misalign the validation, causing it
  to fail. [Clément Notin, Daniel Miller]

o [NSE][GH#1169][GH#1170][GH#1171]][GH#1198] Parser for HTTP Set-Cookie header
  is now more compliant with RFC 6265:
  - empty attributes are tolerated
  - double quotes in cookie and/or attribute values are treated literally
  - attributes with empty values and value-less attributes are parsed equally
  - attributes named "name" or "value" are ignored
  [nnposter]

o [NSE][GH#1158] Fix parsing http-grep.match script-arg. [Hans van den Bogert]

o [Zenmap][GH#1177] Avoid a crash when recent_scans.txt cannot be written to.
  [Daniel Miller]

o Fixed --resume when the path to Nmap contains spaces. Reported on Windows by
  Adriel Desautels. [Daniel Miller]

Nmap 7.70 [2018-03-20]

o [Windows] We made a ton of improvements to our Npcap Windows packet
  capturing library (https://nmap.org/npcap/) for greater performance and
  stability, as well as smoother installer and better 802.11 raw frame
  capturing support. Nmap 7.70 updates the bundled Npcap from version 0.93 to
  0.99-r2, including all these changes from the last seven Npcap releases:
  https://nmap.org/npcap/changelog

o Integrated all of your service/version detection fingerprints submitted from
  March 2017 to August 2017 (728 of them). The signature count went up 1.02%
  to 11,672, including 26 new softmatches.  We now detect 1224 protocols from
  filenet-pch, lscp, and netassistant to sharp-remote, urbackup, and
  watchguard.  We will try to integrate the remaining submissions in the next
  release.

o Integrated all of your IPv4 OS fingerprint submissions from September 2016